prevents overlap when window is resized

--- a/Firebase/css/style.css
+++ b/Firebase/css/style.css
@@ -5,6 +5,7 @@ BODY {
 }
 
 #container {
+	width: 1000px;
 	margin: 0 auto;
 }
 
